--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
       --card:#1b294a;        /* slate blue */
       --accent:#4cafef;      /* bright blue */
       --accent-2:#357abd;    /* darker blue */
-      --text:#f3f7ff;        /* light text */
-      --muted:#c8d6f2;       /* improved contrast */
-      --muted-2:#9fb2d8;     /* secondary muted */
+      --text:#ffffff;        /* WHITE text */
+      --muted:#eef4ff;       /* near-white muted */
+      --muted-2:#d7e3ff;     /* secondary muted */
       --good:#3ddc97;        /* green */
       --bad:#ff6b6b;         /* red */
-      --border:#ffffff24;
+      --border:#ffffff33;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -45,14 +45,14 @@
     .btn-primary{ background:var(--accent); color:#041426 }
     .btn-primary:hover{ background:var(--accent-2) }
     .btn-ghost{ background:transparent; border-color:var(--border); color:var(--text) }
-    .btn-ghost:hover{ background:#ffffff0e }
+    .btn-ghost:hover{ background:#ffffff14 }
     /* Login */
     .login-shell{ min-height:70vh; display:grid; place-items:center; }
     .login-box{ width:min(480px,100%); padding:28px }
     .input{
       width:100%; padding:12px 14px; border-radius:10px; border:1px solid var(--border); background:#0e1a34; color:var(--text);
     }
-    .input::placeholder{ color:#bcd0f8 }
+    .input::placeholder{ color:#f0f5ff }
     label{ font-size:.9rem; color:var(--muted); margin-bottom:6px; display:inline-block }
     /* Grid */
     .grid{ display:grid; gap:16px }
@@ -64,10 +64,9 @@
       padding:12px; border-radius:12px; border:1px solid var(--border); background:#0f1c37;
       cursor:pointer; transition:transform .12s ease, border-color .12s ease;
     }
-    .tile:hover{ transform:translateY(-1px); border-color:#ffffff33 }
-    .tile .name{ font-weight:700 }
-    .tile .price{ color:#e2ecff; margin-top:2px; font-weight:700 } /* brighter */
-    .tile .sub{ color:var(--muted-2); font-size:.85rem }
+    .tile:hover{ transform:translateY(-1px); border-color:#ffffff55 }
+    .tile .name{ font-weight:800; color:#fff }
+    .tile .price{ color:#fff; margin-top:2px; font-weight:800 }
     /* Metrics row */
     .metrics{ display:grid; grid-template-columns:repeat(3,1fr); gap:14px }
     @media (max-width:700px){ .metrics{ grid-template-columns:1fr } }
@@ -75,7 +74,7 @@
       padding:14px; border-radius:12px; border:1px solid var(--border); background:#0f1c37; text-align:center;
     }
     .metric .label{ font-size:.85rem; color:var(--muted-2); letter-spacing:.02em }
-    .metric .value{ font-size:1.6rem; font-weight:800; margin-top:6px }
+    .metric .value{ font-size:1.6rem; font-weight:800; margin-top:6px; color:#fff }
     /* Details */
     .details{ display:grid; grid-template-columns:2fr 1fr; gap:16px }
     @media (max-width:900px){ .details{ grid-template-columns:1fr } }
@@ -85,11 +84,11 @@
     .muted{ color:var(--muted) }
     hr.sep{ border:none; height:1px; background:var(--border); margin:10px 0 }
     table{ width:100%; border-collapse:separate; border-spacing:0 8px }
-    th,td{ text-align:left; padding:8px 10px }
-    th{ color:var(--muted); font-weight:700; border-bottom:1px solid var(--border) }
+    th,td{ text-align:left; padding:8px 10px; color:#fff }
+    th{ color:#e9f1ff; font-weight:800; border-bottom:1px solid var(--border) }
     tr.data{ background:#0f1c37; border:1px solid var(--border) }
     tr.data td{ border-top:1px solid var(--border); border-bottom:1px solid var(--border) }
-    small.err{ color:#ff9c9c }
+    small.err{ color:#ffd0d0 }
   </style>
 </head>
 <body>
@@ -145,7 +144,6 @@
       <div class="panel" style="padding:16px">
         <div class="row" style="margin-bottom:10px">
           <h3 style="margin:0">Stocks</h3>
-          <span class="muted">Live prices update smoothly every 5s</span>
           <span class="spacer"></span>
         </div>
         <div id="stockList" class="grid grid-3"></div>
@@ -167,6 +165,14 @@
             <button id="buyBtn" class="btn btn-primary">Buy</button>
             <button id="sellBtn" class="btn btn-ghost">Sell</button>
             <span id="tradeMsg" class="muted"></span>
+          </div>
+          <div id="autoRow" class="row" style="margin-top:10px">
+            <label for="autoPrice" class="muted">Auto-sell at price</label>
+            <input id="autoPrice" class="input" type="number" min="0" placeholder="e.g. 1200" style="width:160px" />
+            <input id="autoQty" class="input" type="number" min="1" placeholder="qty" style="width:120px" />
+            <button id="setAutoBtn" class="btn btn-primary">Set Auto-Sell</button>
+            <button id="clearAutoBtn" class="btn btn-ghost">Clear</button>
+            <span id="autoMsg" class="muted"></span>
           </div>
         </div>
 
@@ -222,7 +228,8 @@
     /***** Firebase SDK *****/
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-app.js";
     import {
-      getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged
+      getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged,
+      setPersistence, browserSessionPersistence
     } from "https://www.gstatic.com/firebasejs/12.3.0/firebase-auth.js";
     import {
       getFirestore, doc, getDoc, setDoc, updateDoc, collection, getDocs,
@@ -241,6 +248,10 @@
     const app = initializeApp(FIREBASE_CONFIG);
     const auth = getAuth(app);
     const db = getFirestore(app);
+
+    /* Force login every visit (no silent reuse) */
+    await setPersistence(auth, browserSessionPersistence);
+    try { await signOut(auth); } catch(e){}
 
     /***** Elements *****/
     const $ = (id)=>document.getElementById(id);
@@ -266,6 +277,12 @@
     const tradeMsg    = $("tradeMsg");
     const tradeBar    = $("tradeBar");
 
+    const autoPrice   = $("autoPrice");
+    const autoQty     = $("autoQty");
+    const setAutoBtn  = $("setAutoBtn");
+    const clearAutoBtn= $("clearAutoBtn");
+    const autoMsg     = $("autoMsg");
+
     const adminOnlyHint = $("adminOnlyHint");
     const adminControls = $("adminControls");
     const raiseBtn      = $("raiseBtn");
@@ -274,7 +291,6 @@
     const applyFundsBtn = $("applyFundsBtn");
     const fundsMsg      = $("fundsMsg");
     const rankTable     = $("rankTable");
-    const rankWrap      = $("rankWrap");
     const portfolioWrap = $("portfolioWrap");
     const pfTitle       = $("pfTitle");
     const pfSummary     = $("pfSummary");
@@ -287,6 +303,7 @@
     let me = null, myRole = null;
     let selectedId = null;
     let stocks = {};    // id -> { id, name, baseline, baselineVer, defaultBaseline }
+    let myTrader = null; // live snapshot of my trader doc (for auto-sell)
     let series = [];    // chart values
     let chartCtx = chartEl.getContext("2d");
     let lastSampleTime = 0;
@@ -302,13 +319,10 @@
 
     /***** Helpers *****/
     const TICK_MS = 5000;       // prices “target” change every 5s
-    const SIGMA   = 0.018;      // ±1.8% around baseline (tighter, less jumpy)
+    const SIGMA   = 0.018;      // ±1.8% around baseline
     function hashToUnit(str){
       let h = 2166136261 >>> 0; // FNV-1a
-      for(let i=0;i<str.length;i++){
-        h ^= str.charCodeAt(i);
-        h = Math.imul(h, 16777619);
-      }
+      for(let i=0;i<str.length;i++){ h ^= str.charCodeAt(i); h = Math.imul(h, 16777619); }
       return (h >>> 0) / 4294967295;
     }
     function targetFor(stockId, baseline, baselineVer, bucket){
@@ -338,7 +352,7 @@
       if(!user){ showLogin(); return; }
       me = user;
 
-      // Look up role by UID (preferred), fallback to email match
+      // roles/<uid> preferred, fallback email match
       const roleDoc = await getDoc(doc(db,"artifacts",APP_ID,"public","data","roles", user.uid));
       if (roleDoc.exists()){
         myRole = roleDoc.data().role;
@@ -348,14 +362,13 @@
         const snap = await getDocs(q);
         myRole = (!snap.empty) ? (snap.docs[0].data().role) : null;
       }
-
       if(!myRole){ showLogin("Role not found. Create /roles/<UID> with {email, role}."); return; }
 
       roleHeader.textContent = `Welcome, ${myRole}`;
       adminControls.classList.toggle("hidden", myRole!=="admin");
       adminOnlyHint.classList.toggle("hidden", myRole==="admin");
       tradeBar.classList.toggle("hidden", myRole==="admin");   // admin cannot buy/sell
-      if(myRole==="trader") traderMetrics.hidden = false;
+      $("autoRow").classList.toggle("hidden", myRole==="admin");
 
       loginSection.classList.add("hidden");
       dashboard.classList.remove("hidden");
@@ -392,13 +405,13 @@
 
     /***** Stocks *****/
     async function bootstrapStocks(){
-      // Create local defaults to prevent NaN even if DB empty
-      SEED_STOCKS.forEach((name,i)=>{
+      // Local defaults (no NaN even if DB empty)
+      SEED_STOCKS.forEach((name)=>{
         const id = slug(name);
         if (!stocks[id]) stocks[id] = { id, name, defaultBaseline: +(300 + Math.random()*900).toFixed(2), baseline: undefined, baselineVer: 0 };
       });
 
-      // If none exist in Firestore AND user is admin, seed real docs
+      // Seed DB if empty and user is admin
       const col = collection(db,"artifacts",APP_ID,"public","data","stocks");
       const snap = await getDocs(col);
       if (snap.empty && myRole==="admin"){
@@ -436,7 +449,7 @@
         const price = smoothPriceFor(s, t);
         const tile = document.createElement("button");
         tile.className = "tile";
-        tile.innerHTML = `<div class="name">${s.name}</div><div class="price">₹ <span id="p-${s.id}">${fmt(price)}</span></div><div class="sub">tick ~5s</div>`;
+        tile.innerHTML = `<div class="name">${s.name}</div><div class="price">₹ <span id="p-${s.id}">${fmt(price)}</span></div>`;
         tile.addEventListener("click", ()=>selectStock(s.id));
         stockList.appendChild(tile);
       });
@@ -463,26 +476,91 @@
       await updateDoc(ref, { baseline:newBase, baselineVer: Date.now() });
     }
 
-    /***** Trader Portfolio *****/
+    /***** Trader doc + Auto-sell *****/
+    function traderRef(uid){ return doc(db,"artifacts",APP_ID,"public","data","traders", uid); }
+
     async function attachTraderDoc(){
       if (!me) return;
-      const ref = doc(db,"artifacts",APP_ID,"public","data","traders", me.uid);
+      const ref = traderRef(me.uid);
       const s = await getDoc(ref);
       if(!s.exists()){
-        await setDoc(ref, { cash: 100000, initialCash: 100000, portfolio:{} }, { merge:true });
+        await setDoc(ref, { cash: 100000, initialCash: 100000, portfolio:{}, autos:{} }, { merge:true });
+      }
+      onSnapshot(ref, snap=>{
+        myTrader = snap.exists()? snap.data() : { cash:0, initialCash:0, portfolio:{}, autos:{} };
+      });
+    }
+
+    // Auto-sell UI
+    setAutoBtn.addEventListener("click", async ()=>{
+      autoMsg.textContent = "";
+      if (!me || myRole!=="trader"){ autoMsg.textContent = "Traders only."; return; }
+      if (!selectedId){ autoMsg.textContent = "Select a stock."; return; }
+      const p = parseFloat(autoPrice.value);
+      const q = Math.max(1, parseInt(autoQty.value||"1",10));
+      if (!Number.isFinite(p) || p<=0){ autoMsg.textContent = "Enter a valid price."; return; }
+      const ref = traderRef(me.uid);
+      const data = (myTrader || { autos:{} });
+      data.autos = data.autos || {};
+      data.autos[selectedId] = { price:p, qty:q };
+      await setDoc(ref, { autos: data.autos }, { merge:true });
+      autoMsg.textContent = `Auto-sell set: ₹${fmt(p)} / ${q} shares`;
+    });
+
+    clearAutoBtn.addEventListener("click", async ()=>{
+      autoMsg.textContent = "";
+      if (!me || myRole!=="trader" || !selectedId) return;
+      const ref = traderRef(me.uid);
+      const autos = { ...(myTrader?.autos||{}) };
+      delete autos[selectedId];
+      await setDoc(ref, { autos }, { merge:true });
+      autoMsg.textContent = "Cleared.";
+    });
+
+    async function checkAutoSells(){
+      if (!me || myRole!=="trader" || !myTrader) return;
+      const autos = myTrader.autos || {};
+      for (const [sid, rule] of Object.entries(autos)){
+        const st = stocks[sid]; if (!st) continue;
+        const price = smoothPriceFor(st, performance.now());
+        if (price >= rule.price){
+          // sell up to qty or available
+          const ref = traderRef(me.uid);
+          const snap = await getDoc(ref);
+          const t = snap.exists()? snap.data(): { cash:0, initialCash:0, portfolio:{} };
+          const pos = t.portfolio?.[sid] || { quantity:0 };
+          const sellQty = Math.min(rule.qty||0, pos.quantity||0);
+          if (sellQty > 0){
+            t.cash = (+t.cash||0) + sellQty*price;
+            pos.quantity -= sellQty;
+            if (pos.quantity>0){
+              t.portfolio[sid] = pos;
+            } else {
+              delete t.portfolio[sid];
+            }
+            // remove the rule
+            const autos2 = { ...(t.autos||{}) }; delete autos2[sid];
+            await setDoc(ref, { cash:t.cash, portfolio:t.portfolio, autos:autos2 }, { merge:true });
+            if (sid===selectedId){ autoMsg.textContent = `Auto-sold ${sellQty} at ₹${fmt(price)}`; }
+          } else {
+            // no shares → just clear the rule
+            const autos2 = { ...(t.autos||{}) }; delete autos2[sid];
+            await setDoc(ref, { autos:autos2 }, { merge:true });
+          }
+        }
       }
     }
 
+    /***** Trader metrics *****/
     function priceNow(id){ const s=stocks[id]; return s? smoothPriceFor(s, performance.now()):0; }
 
     async function portfolioAndStats(uid){
-      const s = await getDoc(doc(db,"artifacts",APP_ID,"public","data","traders", uid));
+      const s = await getDoc(traderRef(uid));
       const data = s.exists()? s.data(): { cash:0, initialCash:0, portfolio:{} };
       const t = performance.now();
       let invested = 0;
       Object.entries(data.portfolio||{}).forEach(([sid,pos])=>{
-        const st = stocks[sid];
-        if (!st) return;
+        const st = stocks[sid]; if (!st) return;
         invested += (pos.quantity||0) * smoothPriceFor(st, t);
       });
       const working = +data.cash || 0;
@@ -511,7 +589,7 @@
       const q = Math.max(1, parseInt(qtyEl.value||"1",10));
       const st = stocks[selectedId];
       const price = smoothPriceFor(st, performance.now());
-      const ref = doc(db,"artifacts",APP_ID,"public","data","traders", me.uid);
+      const ref = traderRef(me.uid);
       const snap = await getDoc(ref);
       const t = snap.exists()? snap.data(): { cash:100000, initialCash:100000, portfolio:{} };
       t.cash = +t.cash || 0;
@@ -540,7 +618,6 @@
       const rSnap = await getDocs(rolesCol);
       const traders = rSnap.docs.filter(d=> (d.data().role==="trader")).map(d=>({ uid:d.id, email:d.data().email||d.id }));
 
-      // compute total equity for each
       const rows = [];
       for (const tr of traders){
         const stats = await portfolioAndStats(tr.uid);
@@ -556,7 +633,6 @@
         rankTable.appendChild(tr);
       });
 
-      // wire row buttons
       rankTable.querySelectorAll("button[data-uid]").forEach(btn=>{
         btn.addEventListener("click", async ()=>{
           const uid = btn.getAttribute("data-uid");
@@ -575,14 +651,9 @@
         });
       });
     }
+    function loadRankingsLoop(){ loadRankings(); setInterval(loadRankings, 6000); }
 
-    function loadRankingsLoop(){
-      // refresh rankings every ~6s to feel live
-      loadRankings();
-      setInterval(loadRankings, 6000);
-    }
-
-    /***** Animation loop (prices & chart) *****/
+    /***** Animation loop (prices, chart, autos, metrics) *****/
     function drawChart(){
       const w = chartEl.width, h = chartEl.height;
       chartCtx.clearRect(0,0,w,h);
@@ -599,7 +670,6 @@
         chartCtx.fillRect(x, h - barH, xStep-1, barH);
       }
     }
-
     function startAnimationLoop(){
       let last = performance.now();
       function tick(now){
@@ -621,7 +691,7 @@
               drawChart();
             }
           }
-          if (myRole==="trader") refreshMetrics();
+          if (myRole==="trader") { refreshMetrics(); checkAutoSells(); }
         }
         requestAnimationFrame(tick);
       }
